Acrescentar rastreabilidade via headers em mensagens MQTT.

--- a/Examples/Client/index.html
+++ b/Examples/Client/index.html
@@ -52,6 +52,10 @@
             <label for="channelText">Canal (opcional):</label>
             <input type="text" id="channelText" placeholder="notifications">
         </div>
+            <div class="input-group">
+            <label for="targetId">ID do Alvo (opcional):</label>
+            <input type="text" id="targetId" placeholder="ID do alvo da mensagem.">
+        </div>
         <div>
             <button id="sendBtn" onclick="sendMessage()" disabled>Enviar</button>
         </div>
